<resources>
    <string name="app_name">SolidareMaps</string>
    <string name="title_activity_menu__s_m">Menu_SM</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_buscar_locales">Buscar Locales</string>
    <string name="menu_subscripcion">Subscripcion</string>
    <string name="menu_mi_local">Mi Local</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_faq">F.A.Q</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txtDatosMiLocal1">Es obligatorio rellenar todos lo campos que contengan una marca (*)</string>
    <string name="txtInformacionDoantivos">¿Quires habilitar la posibilidad de recibir donativos de los usuarios?</string>
    <string name="btnNuevoDonativosMiLocal">Añadir Donaitvo</string>
    <string name="txtNombreLocalMiLoca">*Nombre del Local</string>
    <string name="txtDireccionLocalMiLocal">*Direccionn del  Local</string>
    <string name="txtTelefonoMiLocal">*Numero telefono del local</string>
    <string name="txtTipoLocalMiLocal">*Tipo de Local</string>
    <string name="swDonativosLocal">Recibir donativos</string>
    <string name="txtAppDonativoMiLocal">* Nombre de la App</string>
    <string name="txtIDDonativoMiLocal">* ID del usuario o numero de telefono</string>
    <string name="toolbar11">Datos del Loca</string>
    <string name="toolbar8">Galeria</string>
    <string name="btnGaleriaLocalIndividual">Galeria</string>
    <string name="txtDescripcion">Descripcion</string>
    <string name="txtDireccion">Direccion</string>
    <string name="txtDonativos">Donativos</string>
    <string name="txtTelefono">Telefono</string>
    <string name="txtHorarios">Horarios</string>
    <string name="textView25">Tipo Local</string>
    <string name="txtComentarios">Ver Comentarios:</string>
    <string name="txtEscribirComentarioLocal">Introduce un comentario</string>
    <string name="btnPublicarOpinionLocal">Publicar</string>
    <string name="txtLunes">Lunes</string>
    <string name="txtMartes">Martes</string>
    <string name="txtMiercoles">Miercoles</string>
    <string name="txtJueves">Jueves</string>
    <string name="txtVierner">Viernes</string>
    <string name="txtSabado">Sabado</string>
    <string name="txtDomingo">Domingo</string>
    <string name="btnInicarSesionLogin">Inciar Sesion</string>
    <string name="btnGoogleLogin">Iniciar con Google</string>
    <string name="textView3">¿Heres nuevo?</string>
    <string name="txtRegistrarseLogin">Registrate</string>
    <string name="txtNumerodeTargetPago">Nº. targeta de credito</string>
    <string name="txtPropietarioTargetaPago">Nombre del Propietario</string>
    <string name="txtFrechaCaducidadTargetaPago">Fecha de Caducidad</string>
    <string name="textInputLayout7">Codigo CV</string>
    <string name="txtImpotePago">Importe</string>
    <string name="btnPagarSubscripcion">Pagar</string>
    <string name="txtNombreRegistrar">Nombre</string>
    <string name="txtContrasenyaRegistrar">Contraseña</string>
    <string name="txtContrasenyaRepetirRegistrar">Confirmar contraseña</string>
    <string name="btnRegistrarseRegistrar">Registrarse</string>
    <string name="textView2">Volver a</string>
    <string name="txtVolverInicioRegistrar">Inicio Sesion</string>
    <string name="textView11">¿Te ha resultado util?</string>
    <string name="btnSiVerFAQ">Si</string>
    <string name="txtDescripcionAlertMiLocal">Selecciona las opciones que mas se adecuen a tu local</string>
    <string name="rbBarTradicionalAlert">Bar tradicional</string>
    <string name="rbGatrobarAlert">Gastro bar/ bar restaurante</string>
    <string name="rbAfterlAlert">After</string>
    <string name="rbChiringitoAlert">Chiringito</string>
    <string name="rbPubAlert">Pub</string>
    <string name="rbBarVinosAlert">Bar de Vinos</string>
    <string name="rbBarCoctelesAlert">Bar de Cocteles</string>
    <string name="rbBarCafesAlert">Bar Cafe</string>
    <string name="rbBarTabernaAlert">Taberna/Cantina</string>
    <string name="rbBarCerveceriaAlert">Bar Cervezeria</string>
    <string name="txtTituloComunesFAQ">Buscar error</string>
    <string name="txtTituloChatFAQ">Chat en Directo</string>
    <string name="toolbar2">Perfil</string>
    <string name="txtCambiarUser">Cambiar Contraseña:</string>
    <string name="txtAntiguaContrasenyaPerfil">Contraseña Actual</string>
    <string name="txtNuevaContrasenyaPerfil">Contraseña Nueva</string>
    <string name="txtRepetirNuevaContrasenyaPerfil">Repetir Contraseña Nueva</string>
    <string name="txtContenidoFree1">Estas son las opciones que estan activas e inactivas en la subscripcion free:</string>
    <string name="txtContenidoFree2">Activas:</string>
    <string name="txtContenidoFree3">+Acceso a la busqueda de locales      +Lista personalizada de locales favoritos   +Comentarios desbloqueados</string>
    <string name="txtContenidoFree4">Inactivas:</string>
    <string name="txtContenidoFree5">-Posibilidad de añadir un local propio  -Chat en directo</string>
    <string name="txtContenidoGold1">Estas son las opciones que estan activas e inactivas en la subscripcion free:</string>
    <string name="txtContenidoGold2">Activas:</string>
    <string name="txtContenidoGold3">+Acceso a la busqueda de locales      +Lista personalizada de locales favoritos            +Comentarios desbloqueados +Posibilidad de añadir un local propio  +Chat en directo</string>
    <string name="btnSeleccionarGoldSubscripcion">29,39€/año</string>
</resources>