<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/favoritosFragment"
            android:icon="@drawable/ic_favoritos"
            android:title="@string/menu_favoritos" />

        <item
            android:id="@+id/miLocalFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_mi_local" />

        <item
            android:id="@+id/subscripcionFragment"
            android:icon="@drawable/ic_mony"
            android:title="@string/menu_subscripcion" />

        <item
            android:id="@+id/FAQFragment"
            android:icon="@drawable/ic_faq"
            android:title="@string/menu_faq" />

    </group>
</menu>