<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_Inicio.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:text="@string/textView3"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtRegistrarseLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInicarSesionLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Email"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUserLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFE8E8"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="430dp"
        android:hint="Password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFE8E8"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnInicarSesionLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="102dp"
        android:hapticFeedbackEnabled="false"
        android:text="@string/btnInicarSesionLogin"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:rippleColor="#E91144"
        app:strokeColor="#E91144" />

    <TextView
        android:id="@+id/txtRegistrarseLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="42dp"
        android:text="@string/txtRegistrarseLogin"
        android:textColor="#7062F2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="301dp"
        android:layout_height="53dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="55dp"
        android:background="@color/white"
        android:drawableStart="@mipmap/google_icon"
        android:text="@string/btnGoogleLogin"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:icon="@mipmap/google_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="38dp"
        android:text="-------------------------------------- or --------------------------------------"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>